Archive2/d7/2cfe8149400c92/output
main.cpp: In function 'int main()':
main.cpp:177:27: error: no matching function for call to 'Attribute<int [2]>::get()'
     auto v2_0 = v2.get<0>();
                           ^
main.cpp:177:27: note: candidates are:
main.cpp:111:11: note: template<int k> Attribute<P>::Tn<k> Attribute<P>::get() [with int k = k; P = {int [2]}]
     Tn<k> get() {
           ^
main.cpp:111:11: note:   template argument deduction/substitution failed:
main.cpp: In substitution of 'template<int k> Attribute<P>::Tn<k> Attribute<P>::get() [with int k = 0]':
main.cpp:177:27:   required from here
main.cpp:111:11: error: function returning an array
main.cpp:125:16: note: template<int k, int e> Attribute<P>::EltType<k> Attribute<P>::get() [with int k = k; int e = e; P = {int [2]}]
     EltType<k> get() {
                ^
main.cpp:125:16: note:   template argument deduction/substitution failed:
main.cpp:177:27: note:   couldn't deduce template parameter 'e'
     auto v2_0 = v2.get<0>();
                           ^
